# football

./: .ci-trigger  .coverage  .coveragerc  .dockerignore  .editorconfig  .env  .env.example  .env.test  .env.test.example  .envrc  .git_clean_history  .gitignore  .gitleaks.toml  .local.freeze  .pre-commit-config.yaml  AICULTUREKIT_ROLLBACK_EXECUTION_REPORT.md  AI_DEVELOPMENT_GUIDELINES.md  AI_FILE_GUARD_IMPLEMENTATION_REPORT.md  AI_PROGRAMMING_ANALYSIS.md  AI_PROGRAMMING_CONSTRAINTS.md  AI_PROGRAMMING_MECHANISMS_TEST_REPORT.md  AI_SECURITY_PREVENTION_SYSTEM.md  CI_ISSUES_ANALYSIS.md  CI_ISSUES_COMPREHENSIVE_ANALYSIS.md  CI_ISSUES_SOLVED_FINAL.md  CI_MONITORING_SOLUTION.md  CI_MONITORING_USAGE_GUIDE.md  CI_PREVENTION_AND_SOLUTION_VERIFICATION.md  CI_PREVENTION_RULES.json  CI_PROBLEMS_REPORT.md  CI_PROBLEM_ANALYSIS_SUMMARY.md  CI_PROBLEM_STATISTICS.md  CI_RED_LIGHT_COMPREHENSIVE_ANALYSIS.md  CI_RED_LIGHT_ROOT_CAUSE_ANALYSIS.md  CI_RED_LIGHT_SOLUTION_REPORT.md  CI_SECURITY_FIXES.md  CI_VERIFICATION_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPLETE_CI_SOLUTION_SUMMARY.md  (+103 more)
.cursor/: rules.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit.backup.20250903_224842
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch_protection.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_improvement.md
.github/workflows/: ai-fix-pr.yml  cd.yml  ci.yml  ci.yml.backup.20250901_192437  ci.yml.bak  codeql.yml  coverage-alert.yml  coverage.yml  gitleaks.yml  guardrail-daily.yml  lightweight-ci.yml  nightly-bug-report.yml  notify-on-failure.yml  notify-pr-status.yml  security.yml  test-comprehensive.yml
.github/workflows.old/: ai-maintenance.yml  ci.yml  codeql.yml  gitleaks.yml  security.yml  test-comprehensive.yml
.tools/guard/: no_nested_git.py
ai_context_guardian/: __init__.py  main.py  requirements.txt
ai_context_guardian/config/: __init__.py  default.yml
ai_context_guardian/core/: __init__.py  detector.py  token_manager.py
ai_context_guardian/examples/: __init__.py
ai_context_guardian/plugins/: __init__.py
ai_context_guardian/rules/: __init__.py
ai_context_guardian/utils/: __init__.py
apps/api/: db.py  logging_config.py  main.py  middleware.py  model_registry.py  models.py  prefect.py  redis.py
apps/backtest/: engine.py
apps/trainer/: xgboost_trainer.py
config/: development.conf  production.env.template
configs/: production.env.template
configs/environments/: development.env  production.env  staging.env
context/: _pack.md
contracts/: feature_specs.yaml
data/: ci_monitoring_report.json
data/analysis_results/: analysis_report_20250903_013657.json  collection_report_20250903_014655.json  demo_matches_20250903_013657.json  system_test_report_20250903_095734.json
data/bug_fixes/: .gitkeep
data/ci_test_reports/: ci_fix_report.md  docker_ci_report_20250903.md
data/feedback/: .gitkeep  ai_environment_status.json  ai_file_status.json  ai_test_feedback.json
data/samples/: odds_sample.json
data_pipeline/: contract_validator.py
data_pipeline/features/: build.py  rolling.py
data_pipeline/ingest/: base.py  csv_adapter.py
data_pipeline/loaders/: __init__.py
data_pipeline/sources/: __init__.py  football_api.py  ingest_matches.py  ingest_odds.py  odds_fetcher.py
data_pipeline/transforms/: feature_engineer.py  ingest_features.py
dev-tools/: Dockerfile.ci-test-ubuntu24  README.md
docs/: AI_DEVELOPMENT_RULES.md.bak  AI_FILE_GUARD_GUIDE.md  AI_QUICKSTART.md  AI_TOOLS_GUIDE.md  API.md  ARCHITECTURE.md  ARCHITECTURE.md.bak  CI_KNOWLEDGE_BASE.md  CONFIG.md  DATA_PLATFORM_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEVELOPER_CHECKLIST.md  DEVELOPMENT.md  FINAL_ACCEPTANCE_REPORT.md  GITHUB_NOTIFICATIONS_SETUP.md  GITHUB_OPTIMIZATION_GUIDE.md  GITHUB_RELEASE_TEMPLATE.md  GITHUB_REPO_SETUP.md  GITHUB_SETUP_GUIDE.md  IMMEDIATE_ACTION_GUIDE.md  LOCAL_CI_SYSTEM.md  LOCAL_QA_SOLUTION.md  NEXT_GEN_CI_UPGRADE_REPORT.md  PROJECT_SHOWCASE_GUIDE.md  QUICK_SETUP_LOCAL_CI.md  README.md  SOCIAL_MEDIA_LAUNCH.md  TASKS.md  TASKS.md.bak  VERSION_HISTORY.md  dev_log.md  dev_log.md.bak
docs/analysis/: BIG_TECH_STANDARDS_ANALYSIS.md
env-templates/: template.env
examples/: minimal_backtest.py  minimal_predict.py
flows/: ai_fix_validation_flow.py  data_collection_flow.py
football_predict_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
football_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
installer/: scaffold-installer.sh
models/: predictor.py  registry.py
prompts/: system_prompt.yaml
reports/: CI_GATES_REPORT.md  test_report_20250830_004910.html  test_report_20250830_004910.json  test_summary_20250830_004910.md
runs/: runs.csv
scaffold-modules/: README.md  module-dependencies.yaml
scripts/: activate-venv.sh  ai-auto-init.py  ai-compliance-monitor.py  ai_file_guard.py  ai_file_monitor.py  ai_health_check.py  ai_security_guard.py  analyze_real_data.py  automated_test_report.py  backup_database.sh  check-venv.sh  check_env_consistency.sh  ci-check.sh  ci-dashboard.py  ci-diagnostics.py  ci-precheck.sh  ci-problem-detector.py  ci-unified.sh  ci_auto_fix.py  ci_complete_fix.sh  ci_database_test.py  ci_realtime_monitor.py  ci_remote_simulator.sh  ci_smart_diagnostic.py  collect_future_fixtures.py  collect_league_data.py  collect_real_data.py  comprehensive_test.py  context_pack.py  coverage-monitor.py  demo_analysis.py  dependency-conflict-detector.py  dev-env-check.py  enhanced_local_ci.py  env-manager.sh  finalize_upgrade.sh  fix_and_commit.sh  generate_openapi.py  get_competitions.py  gh-monitor.sh  (+31 more)
sql/: init-prefect-db.sh  schema.sql  schema_postgresql.sql  schema_sqlite.sql
tests/: MIGRATION_GUIDE.md  OPTIMIZATION_COMPLETE.md  PHASE_2_OPTIMIZATION_COMPLETE.md  README.md  conftest.py  factories.py  run_tests.py  test_api_predict.py  test_api_simple.py  test_basic.py  test_features_rolling.py  test_ingest_csv.py  test_models.py  test_predictor_coverage.py  test_settings.py
trainer/: fit_xgb.py
(+219 files in other folders)
